v1.0.0/modules/schema/pages/class/ContractRight.adoc
= `ContractRight`
:toclevels: 4


+++Provides definition of Transmission Ownership Right and Existing Transmission Contract identifiers for use by SCUC. RMR contract hosting: Startup lead time, Contract Service Limits, Max Service Hours, Max MWhs, Max Start-ups, Ramp Rate, Max Net Dependable Capacity, Min Capacity and Unit Substitution for DAM/RTM to retrieve.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ContractRight`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`ContractRight`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ContractRight {
  style {
    fill: "#fffbef"
    shadow: true
  }
}





TREntitlement {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ContractDistributionFactor {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



SubstitutionResourceList {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



BidSelfSched {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



TransmissionRightChain {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



TransmissionRightChain {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



RTO {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



SchedulingCoordinator {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



TransmissionInterfaceRightEntitlement {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





ContractRight -> TREntitlement: TREntitlement


ContractRight -> ContractDistributionFactor: ContractDistributionFactor


ContractRight -> SubstitutionResourceList: SubstitutionResourceList


ContractRight -> BidSelfSched: BidSelfSched


ContractRight -> TransmissionRightChain: Chain_TransmissionRightChain


ContractRight -> TransmissionRightChain: Ind_TransmissionRightChain


ContractRight -> RTO: RTO


ContractRight -> SchedulingCoordinator: SchedulingCoordinator


ContractRight -> TransmissionInterfaceRightEntitlement: TransmissionInterfaceEntitlement


ContractRight -> DiagramObject: DiagramObjects


ContractRight -> InstanceSet: InstanceSet


ContractRight -> Name: Names


ContractRight -> ChangeSetMember: PropertiesCIMDataObject


ContractRight -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<RTO,`RTO`>>
| 1
| xref::class/RTO.adoc[`RTO`]
| n/a

| <<SchedulingCoordinator,`SchedulingCoordinator`>>
| 1
| xref::class/SchedulingCoordinator.adoc[`SchedulingCoordinator`]
| n/a

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<Chain_TransmissionRightChain,`Chain_TransmissionRightChain`>>
| 0..1
| xref::class/TransmissionRightChain.adoc[`TransmissionRightChain`]
| n/a

| <<Ind_TransmissionRightChain,`Ind_TransmissionRightChain`>>
| 0..1
| xref::class/TransmissionRightChain.adoc[`TransmissionRightChain`]
| n/a

| <<TRType,`TRType`>>
| 0..1
| xref::enumeration/TRType.adoc[`TRType`]
| +++Transmission Right type - is this an individual contract right or a chain contract right. Types = CHAIN or INDIVIDUAL+++

| <<chainOrder,`chainOrder`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++When used in conjunction with a Transmission Right contract chain, this is the precedence for the contracts.+++

| <<contractMW,`contractMW`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++MW value of the contract+++

| <<contractPrice,`contractPrice`>>
| 0..1
| xref::class/CostPerEnergyUnit.adoc[`CostPerEnergyUnit`]
| +++Financial value of the contract+++

| <<contractPriority,`contractPriority`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Priority for the contract. This should be unique amoung all contracts for a specific resource. This value is the directive for the SCUC algorithm on the order to satisfy/cut contracts.+++

| <<contractStatus,`contractStatus`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Contract status+++

| <<contractType,`contractType`>>
| 0..1
| xref::enumeration/ContractType.adoc[`ContractType`]
| +++type of the contract. Possible values are but not limited by:

ETC, TOR or RMR and RMT self schedules+++

| <<financialLocation,`financialLocation`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| +++Indicator if the location associated with this contract is financial (e.g. pricing nodes) or physical (e.g. connectivity nodes).+++

| <<financialRightsDAM,`financialRightsDAM`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| +++Flag to indicate this contract provides financial rights in the DA Market+++

| <<financialRightsRTM,`financialRightsRTM`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| +++Flag to indicate this contract provides financial rights in the RT Market+++

| <<fuelAdder,`fuelAdder`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Estimated Fuel Adder+++

| <<latestSchedMinutes,`latestSchedMinutes`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++This indicates the latest schedule minutes (e.g. t - xx) that this resource can be notified to respond. This attribute is only used if the market type is not supplied.+++

| <<latestSchedMktType,`latestSchedMktType`>>
| 0..1
| xref::enumeration/MarketType.adoc[`MarketType`]
| +++This indicates the latest schedule market type a contract can be applied to. This is used in conjunction with the latestSchedMinutes attribute to determine the latest time this contract can be called in. The possible values for this attribute are: DAM, RTM or it can be omitted. If omitted, the latestSchedMinutes attribute defines the value.+++

| <<maxNetDependableCapacity,`maxNetDependableCapacity`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Maximum Net Dependable Capacity+++

| <<maximumScheduleQuantity,`maximumScheduleQuantity`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Maximum schedule MW quantity+++

| <<maximumServiceHours,`maximumServiceHours`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Maximum service hours+++

| <<maximumStartups,`maximumStartups`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Maximum startups+++

| <<minimumLoad,`minimumLoad`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Minimum Load+++

| <<minimumScheduleQuantity,`minimumScheduleQuantity`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Minimum schedule quanity+++

| <<physicalRightsDAM,`physicalRightsDAM`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| +++Flag to indicate this contract provides physical rights in the DA Market+++

| <<physicalRightsRTM,`physicalRightsRTM`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| +++Flag to indicate this contract provides physical rights in the RT Market+++

| <<startupLeadTime,`startupLeadTime`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Start up lead time+++

| <<BidSelfSched,`BidSelfSched`>>
| 0..*
| xref::class/BidSelfSched.adoc[`BidSelfSched`]
| n/a

| <<ContractDistributionFactor,`ContractDistributionFactor`>>
| 0..*
| xref::class/ContractDistributionFactor.adoc[`ContractDistributionFactor`]
| n/a

| <<SubstitutionResourceList,`SubstitutionResourceList`>>
| 0..*
| xref::class/SubstitutionResourceList.adoc[`SubstitutionResourceList`]
| n/a

| <<TREntitlement,`TREntitlement`>>
| 0..*
| xref::class/TREntitlement.adoc[`TREntitlement`]
| n/a

| <<TransmissionInterfaceEntitlement,`TransmissionInterfaceEntitlement`>>
| 0..*
| xref::class/TransmissionInterfaceRightEntitlement.adoc[`TransmissionInterfaceRightEntitlement`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#BidSelfSched]
=== `BidSelfSched`


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.BidSelfSched`
| Cardinality
| 0..*
| Type
| xref::class/BidSelfSched.adoc[`BidSelfSched`]


|===

//[discrete]
[#Chain_TransmissionRightChain]
=== `Chain_TransmissionRightChain`


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.Chain_TransmissionRightChain`
| Cardinality
| 0..1
| Type
| xref::class/TransmissionRightChain.adoc[`TransmissionRightChain`]


|===

//[discrete]
[#chainOrder]
=== `chainOrder`
+++When used in conjunction with a Transmission Right contract chain, this is the precedence for the contracts.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.chainOrder`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#ContractDistributionFactor]
=== `ContractDistributionFactor`


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.ContractDistributionFactor`
| Cardinality
| 0..*
| Type
| xref::class/ContractDistributionFactor.adoc[`ContractDistributionFactor`]


|===

//[discrete]
[#contractMW]
=== `contractMW`
+++MW value of the contract+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.contractMW`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#contractPrice]
=== `contractPrice`
+++Financial value of the contract+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.contractPrice`
| Cardinality
| 0..1
| Type
| xref::class/CostPerEnergyUnit.adoc[`CostPerEnergyUnit`]


|===

//[discrete]
[#contractPriority]
=== `contractPriority`
+++Priority for the contract. This should be unique amoung all contracts for a specific resource. This value is the directive for the SCUC algorithm on the order to satisfy/cut contracts.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.contractPriority`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#contractStatus]
=== `contractStatus`
+++Contract status+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.contractStatus`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#contractType]
=== `contractType`
+++type of the contract. Possible values are but not limited by:

ETC, TOR or RMR and RMT self schedules+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.contractType`
| Cardinality
| 0..1
| Type
| xref::enumeration/ContractType.adoc[`ContractType`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#financialLocation]
=== `financialLocation`
+++Indicator if the location associated with this contract is financial (e.g. pricing nodes) or physical (e.g. connectivity nodes).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.financialLocation`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

//[discrete]
[#financialRightsDAM]
=== `financialRightsDAM`
+++Flag to indicate this contract provides financial rights in the DA Market+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.financialRightsDAM`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

//[discrete]
[#financialRightsRTM]
=== `financialRightsRTM`
+++Flag to indicate this contract provides financial rights in the RT Market+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.financialRightsRTM`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

//[discrete]
[#fuelAdder]
=== `fuelAdder`
+++Estimated Fuel Adder+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.fuelAdder`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#Ind_TransmissionRightChain]
=== `Ind_TransmissionRightChain`


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.Ind_TransmissionRightChain`
| Cardinality
| 0..1
| Type
| xref::class/TransmissionRightChain.adoc[`TransmissionRightChain`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#latestSchedMinutes]
=== `latestSchedMinutes`
+++This indicates the latest schedule minutes (e.g. t - xx) that this resource can be notified to respond. This attribute is only used if the market type is not supplied.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.latestSchedMinutes`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#latestSchedMktType]
=== `latestSchedMktType`
+++This indicates the latest schedule market type a contract can be applied to. This is used in conjunction with the latestSchedMinutes attribute to determine the latest time this contract can be called in. The possible values for this attribute are: DAM, RTM or it can be omitted. If omitted, the latestSchedMinutes attribute defines the value.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.latestSchedMktType`
| Cardinality
| 0..1
| Type
| xref::enumeration/MarketType.adoc[`MarketType`]


|===

//[discrete]
[#maximumScheduleQuantity]
=== `maximumScheduleQuantity`
+++Maximum schedule MW quantity+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.maximumScheduleQuantity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#maximumServiceHours]
=== `maximumServiceHours`
+++Maximum service hours+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.maximumServiceHours`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#maximumStartups]
=== `maximumStartups`
+++Maximum startups+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.maximumStartups`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#maxNetDependableCapacity]
=== `maxNetDependableCapacity`
+++Maximum Net Dependable Capacity+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.maxNetDependableCapacity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#minimumLoad]
=== `minimumLoad`
+++Minimum Load+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.minimumLoad`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#minimumScheduleQuantity]
=== `minimumScheduleQuantity`
+++Minimum schedule quanity+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.minimumScheduleQuantity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#physicalRightsDAM]
=== `physicalRightsDAM`
+++Flag to indicate this contract provides physical rights in the DA Market+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.physicalRightsDAM`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

//[discrete]
[#physicalRightsRTM]
=== `physicalRightsRTM`
+++Flag to indicate this contract provides physical rights in the RT Market+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.physicalRightsRTM`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RTO]
=== `RTO`


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.RTO`
| Cardinality
| 1
| Type
| xref::class/RTO.adoc[`RTO`]


|===

//[discrete]
[#SchedulingCoordinator]
=== `SchedulingCoordinator`


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.SchedulingCoordinator`
| Cardinality
| 1
| Type
| xref::class/SchedulingCoordinator.adoc[`SchedulingCoordinator`]


|===

//[discrete]
[#startupLeadTime]
=== `startupLeadTime`
+++Start up lead time+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.startupLeadTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#SubstitutionResourceList]
=== `SubstitutionResourceList`


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.SubstitutionResourceList`
| Cardinality
| 0..*
| Type
| xref::class/SubstitutionResourceList.adoc[`SubstitutionResourceList`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TransmissionInterfaceEntitlement]
=== `TransmissionInterfaceEntitlement`


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.TransmissionInterfaceEntitlement`
| Cardinality
| 0..*
| Type
| xref::class/TransmissionInterfaceRightEntitlement.adoc[`TransmissionInterfaceRightEntitlement`]


|===

//[discrete]
[#TREntitlement]
=== `TREntitlement`


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.TREntitlement`
| Cardinality
| 0..*
| Type
| xref::class/TREntitlement.adoc[`TREntitlement`]


|===

//[discrete]
[#TRType]
=== `TRType`
+++Transmission Right type - is this an individual contract right or a chain contract right. Types = CHAIN or INDIVIDUAL+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.TRType`
| Cardinality
| 0..1
| Type
| xref::enumeration/TRType.adoc[`TRType`]


|===


