v1.1.0/modules/schema/pages/class/ContractRight.adoc
= `ContractRight`
:toclevels: 4


+++Provides definition of Transmission Ownership Right and Existing Transmission Contract identifiers for use by SCUC. RMR contract hosting: Startup lead time, Contract Service Limits, Max Service Hours, Max MWhs, Max Start-ups, Ramp Rate, Max Net Dependable Capacity, Min Capacity and Unit Substitution for DAM/RTM to retrieve.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ContractRight`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`ContractRight`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<BidSelfSched,`BidSelfSched`>>
//| [[slots_table.BidSelfSched]]<<BidSelfSched,`BidSelfSched`>>
| 0..* +
xref::class/BidSelfSched.adoc[`BidSelfSched`]
| _n/a_
| _n/a_

| <<Chain_TransmissionRightChain,`Chain_TransmissionRightChain`>>
//| [[slots_table.Chain_TransmissionRightChain]]<<Chain_TransmissionRightChain,`Chain_TransmissionRightChain`>>
| 0..1 +
xref::class/TransmissionRightChain.adoc[`TransmissionRightChain`]
| _n/a_
| _n/a_

| <<ContractDistributionFactor,`ContractDistributionFactor`>>
//| [[slots_table.ContractDistributionFactor]]<<ContractDistributionFactor,`ContractDistributionFactor`>>
| 0..* +
xref::class/ContractDistributionFactor.adoc[`ContractDistributionFactor`]
| _n/a_
| _n/a_

| <<Ind_TransmissionRightChain,`Ind_TransmissionRightChain`>>
//| [[slots_table.Ind_TransmissionRightChain]]<<Ind_TransmissionRightChain,`Ind_TransmissionRightChain`>>
| 0..1 +
xref::class/TransmissionRightChain.adoc[`TransmissionRightChain`]
| _n/a_
| _n/a_

| <<RTO,`RTO`>>
//| [[slots_table.RTO]]<<RTO,`RTO`>>
| 1 +
xref::class/RTO.adoc[`RTO`]
| _n/a_
| _n/a_

| <<SchedulingCoordinator,`SchedulingCoordinator`>>
//| [[slots_table.SchedulingCoordinator]]<<SchedulingCoordinator,`SchedulingCoordinator`>>
| 1 +
xref::class/SchedulingCoordinator.adoc[`SchedulingCoordinator`]
| _n/a_
| _n/a_

| <<SubstitutionResourceList,`SubstitutionResourceList`>>
//| [[slots_table.SubstitutionResourceList]]<<SubstitutionResourceList,`SubstitutionResourceList`>>
| 0..* +
xref::class/SubstitutionResourceList.adoc[`SubstitutionResourceList`]
| _n/a_
| _n/a_

| <<TREntitlement,`TREntitlement`>>
//| [[slots_table.TREntitlement]]<<TREntitlement,`TREntitlement`>>
| 0..* +
xref::class/TREntitlement.adoc[`TREntitlement`]
| _n/a_
| _n/a_

| <<TRType,`TRType`>>
//| [[slots_table.TRType]]<<TRType,`TRType`>>
| 0..1 +
xref::enumeration/TRType.adoc[`TRType`]
| +++Transmission Right type - is this an individual contract right or a chain contract right. Types = CHAIN or INDIVIDUAL+++
| _n/a_

| <<TransmissionInterfaceEntitlement,`TransmissionInterfaceEntitlement`>>
//| [[slots_table.TransmissionInterfaceEntitlement]]<<TransmissionInterfaceEntitlement,`TransmissionInterfaceEntitlement`>>
| 0..* +
xref::class/TransmissionInterfaceRightEntitlement.adoc[`TransmissionInterfaceRightEntitlement`]
| _n/a_
| _n/a_

| <<chainOrder,`chainOrder`>>
//| [[slots_table.chainOrder]]<<chainOrder,`chainOrder`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++When used in conjunction with a Transmission Right contract chain, this is the precedence for the contracts.+++
| _n/a_

| <<contractMW,`contractMW`>>
//| [[slots_table.contractMW]]<<contractMW,`contractMW`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++MW value of the contract+++
| _n/a_

| <<contractPrice,`contractPrice`>>
//| [[slots_table.contractPrice]]<<contractPrice,`contractPrice`>>
| 0..1 +
xref::class/CostPerEnergyUnit.adoc[`CostPerEnergyUnit`]
| +++Financial value of the contract+++
| _n/a_

| <<contractPriority,`contractPriority`>>
//| [[slots_table.contractPriority]]<<contractPriority,`contractPriority`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Priority for the contract. This should be unique amoung all contracts for a specific resource. This value is the directive...+++
| _n/a_

| <<contractStatus,`contractStatus`>>
//| [[slots_table.contractStatus]]<<contractStatus,`contractStatus`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Contract status+++
| _n/a_

| <<contractType,`contractType`>>
//| [[slots_table.contractType]]<<contractType,`contractType`>>
| 0..1 +
xref::enumeration/ContractType.adoc[`ContractType`]
| +++type of the contract. Possible values are but not limited by:

ETC, TOR or RMR and RMT self schedules+++
| _n/a_

| <<financialLocation,`financialLocation`>>
//| [[slots_table.financialLocation]]<<financialLocation,`financialLocation`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Indicator if the location associated with this contract is financial (e.g. pricing nodes) or physical (e.g. connectivity nodes).+++
| _n/a_

| <<financialRightsDAM,`financialRightsDAM`>>
//| [[slots_table.financialRightsDAM]]<<financialRightsDAM,`financialRightsDAM`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Flag to indicate this contract provides financial rights in the DA Market+++
| _n/a_

| <<financialRightsRTM,`financialRightsRTM`>>
//| [[slots_table.financialRightsRTM]]<<financialRightsRTM,`financialRightsRTM`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Flag to indicate this contract provides financial rights in the RT Market+++
| _n/a_

| <<fuelAdder,`fuelAdder`>>
//| [[slots_table.fuelAdder]]<<fuelAdder,`fuelAdder`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Estimated Fuel Adder+++
| _n/a_

| <<latestSchedMinutes,`latestSchedMinutes`>>
//| [[slots_table.latestSchedMinutes]]<<latestSchedMinutes,`latestSchedMinutes`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++This indicates the latest schedule minutes (e.g. t - xx) that this resource can be notified to respond. This attribute is...+++
| _n/a_

| <<latestSchedMktType,`latestSchedMktType`>>
//| [[slots_table.latestSchedMktType]]<<latestSchedMktType,`latestSchedMktType`>>
| 0..1 +
xref::enumeration/MarketType.adoc[`MarketType`]
| +++This indicates the latest schedule market type a contract can be applied to. This is used in conjunction with the...+++
| _n/a_

| <<maxNetDependableCapacity,`maxNetDependableCapacity`>>
//| [[slots_table.maxNetDependableCapacity]]<<maxNetDependableCapacity,`maxNetDependableCapacity`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum Net Dependable Capacity+++
| _n/a_

| <<maximumScheduleQuantity,`maximumScheduleQuantity`>>
//| [[slots_table.maximumScheduleQuantity]]<<maximumScheduleQuantity,`maximumScheduleQuantity`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum schedule MW quantity+++
| _n/a_

| <<maximumServiceHours,`maximumServiceHours`>>
//| [[slots_table.maximumServiceHours]]<<maximumServiceHours,`maximumServiceHours`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Maximum service hours+++
| _n/a_

| <<maximumStartups,`maximumStartups`>>
//| [[slots_table.maximumStartups]]<<maximumStartups,`maximumStartups`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Maximum startups+++
| _n/a_

| <<minimumLoad,`minimumLoad`>>
//| [[slots_table.minimumLoad]]<<minimumLoad,`minimumLoad`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Minimum Load+++
| _n/a_

| <<minimumScheduleQuantity,`minimumScheduleQuantity`>>
//| [[slots_table.minimumScheduleQuantity]]<<minimumScheduleQuantity,`minimumScheduleQuantity`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Minimum schedule quanity+++
| _n/a_

| <<physicalRightsDAM,`physicalRightsDAM`>>
//| [[slots_table.physicalRightsDAM]]<<physicalRightsDAM,`physicalRightsDAM`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Flag to indicate this contract provides physical rights in the DA Market+++
| _n/a_

| <<physicalRightsRTM,`physicalRightsRTM`>>
//| [[slots_table.physicalRightsRTM]]<<physicalRightsRTM,`physicalRightsRTM`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Flag to indicate this contract provides physical rights in the RT Market+++
| _n/a_

| <<startupLeadTime,`startupLeadTime`>>
//| [[slots_table.startupLeadTime]]<<startupLeadTime,`startupLeadTime`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Start up lead time+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#BidSelfSched]
=== `BidSelfSched`



[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.BidSelfSched`
| Cardinality
| 0..*
| Type
| xref::class/BidSelfSched.adoc[`BidSelfSched`]


|===

////
[.text-left]
--
<<slots_table.BidSelfSched,&#10548;>>
--
////


//[discrete]
[#Chain_TransmissionRightChain]
=== `Chain_TransmissionRightChain`



[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.Chain_TransmissionRightChain`
| Cardinality
| 0..1
| Type
| xref::class/TransmissionRightChain.adoc[`TransmissionRightChain`]


|===

////
[.text-left]
--
<<slots_table.Chain_TransmissionRightChain,&#10548;>>
--
////


//[discrete]
[#chainOrder]
=== `chainOrder`
+++When used in conjunction with a Transmission Right contract chain, this is the precedence for the contracts.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.chainOrder`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.chainOrder,&#10548;>>
--
////


//[discrete]
[#ContractDistributionFactor]
=== `ContractDistributionFactor`



[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.ContractDistributionFactor`
| Cardinality
| 0..*
| Type
| xref::class/ContractDistributionFactor.adoc[`ContractDistributionFactor`]


|===

////
[.text-left]
--
<<slots_table.ContractDistributionFactor,&#10548;>>
--
////


//[discrete]
[#contractMW]
=== `contractMW`
+++MW value of the contract+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.contractMW`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.contractMW,&#10548;>>
--
////


//[discrete]
[#contractPrice]
=== `contractPrice`
+++Financial value of the contract+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.contractPrice`
| Cardinality
| 0..1
| Type
| xref::class/CostPerEnergyUnit.adoc[`CostPerEnergyUnit`]


|===

////
[.text-left]
--
<<slots_table.contractPrice,&#10548;>>
--
////


//[discrete]
[#contractPriority]
=== `contractPriority`
+++Priority for the contract. This should be unique amoung all contracts for a specific resource. This value is the directive for the SCUC algorithm on the order to satisfy/cut contracts.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.contractPriority`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.contractPriority,&#10548;>>
--
////


//[discrete]
[#contractStatus]
=== `contractStatus`
+++Contract status+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.contractStatus`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.contractStatus,&#10548;>>
--
////


//[discrete]
[#contractType]
=== `contractType`
+++type of the contract. Possible values are but not limited by:

ETC, TOR or RMR and RMT self schedules+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.contractType`
| Cardinality
| 0..1
| Type
| xref::enumeration/ContractType.adoc[`ContractType`]


|===

////
[.text-left]
--
<<slots_table.contractType,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#financialLocation]
=== `financialLocation`
+++Indicator if the location associated with this contract is financial (e.g. pricing nodes) or physical (e.g. connectivity nodes).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.financialLocation`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

////
[.text-left]
--
<<slots_table.financialLocation,&#10548;>>
--
////


//[discrete]
[#financialRightsDAM]
=== `financialRightsDAM`
+++Flag to indicate this contract provides financial rights in the DA Market+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.financialRightsDAM`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

////
[.text-left]
--
<<slots_table.financialRightsDAM,&#10548;>>
--
////


//[discrete]
[#financialRightsRTM]
=== `financialRightsRTM`
+++Flag to indicate this contract provides financial rights in the RT Market+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.financialRightsRTM`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

////
[.text-left]
--
<<slots_table.financialRightsRTM,&#10548;>>
--
////


//[discrete]
[#fuelAdder]
=== `fuelAdder`
+++Estimated Fuel Adder+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.fuelAdder`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.fuelAdder,&#10548;>>
--
////


//[discrete]
[#Ind_TransmissionRightChain]
=== `Ind_TransmissionRightChain`



[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.Ind_TransmissionRightChain`
| Cardinality
| 0..1
| Type
| xref::class/TransmissionRightChain.adoc[`TransmissionRightChain`]


|===

////
[.text-left]
--
<<slots_table.Ind_TransmissionRightChain,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#latestSchedMinutes]
=== `latestSchedMinutes`
+++This indicates the latest schedule minutes (e.g. t - xx) that this resource can be notified to respond. This attribute is only used if the market type is not supplied.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.latestSchedMinutes`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.latestSchedMinutes,&#10548;>>
--
////


//[discrete]
[#latestSchedMktType]
=== `latestSchedMktType`
+++This indicates the latest schedule market type a contract can be applied to. This is used in conjunction with the latestSchedMinutes attribute to determine the latest time this contract can be called in. The possible values for this attribute are: DAM, RTM or it can be omitted. If omitted, the latestSchedMinutes attribute defines the value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.latestSchedMktType`
| Cardinality
| 0..1
| Type
| xref::enumeration/MarketType.adoc[`MarketType`]


|===

////
[.text-left]
--
<<slots_table.latestSchedMktType,&#10548;>>
--
////


//[discrete]
[#maximumScheduleQuantity]
=== `maximumScheduleQuantity`
+++Maximum schedule MW quantity+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.maximumScheduleQuantity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.maximumScheduleQuantity,&#10548;>>
--
////


//[discrete]
[#maximumServiceHours]
=== `maximumServiceHours`
+++Maximum service hours+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.maximumServiceHours`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.maximumServiceHours,&#10548;>>
--
////


//[discrete]
[#maximumStartups]
=== `maximumStartups`
+++Maximum startups+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.maximumStartups`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.maximumStartups,&#10548;>>
--
////


//[discrete]
[#maxNetDependableCapacity]
=== `maxNetDependableCapacity`
+++Maximum Net Dependable Capacity+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.maxNetDependableCapacity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.maxNetDependableCapacity,&#10548;>>
--
////


//[discrete]
[#minimumLoad]
=== `minimumLoad`
+++Minimum Load+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.minimumLoad`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.minimumLoad,&#10548;>>
--
////


//[discrete]
[#minimumScheduleQuantity]
=== `minimumScheduleQuantity`
+++Minimum schedule quanity+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.minimumScheduleQuantity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.minimumScheduleQuantity,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#physicalRightsDAM]
=== `physicalRightsDAM`
+++Flag to indicate this contract provides physical rights in the DA Market+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.physicalRightsDAM`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

////
[.text-left]
--
<<slots_table.physicalRightsDAM,&#10548;>>
--
////


//[discrete]
[#physicalRightsRTM]
=== `physicalRightsRTM`
+++Flag to indicate this contract provides physical rights in the RT Market+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.physicalRightsRTM`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

////
[.text-left]
--
<<slots_table.physicalRightsRTM,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#RTO]
=== `RTO`



[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.RTO`
| Cardinality
| 1
| Type
| xref::class/RTO.adoc[`RTO`]


|===

////
[.text-left]
--
<<slots_table.RTO,&#10548;>>
--
////


//[discrete]
[#SchedulingCoordinator]
=== `SchedulingCoordinator`



[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.SchedulingCoordinator`
| Cardinality
| 1
| Type
| xref::class/SchedulingCoordinator.adoc[`SchedulingCoordinator`]


|===

////
[.text-left]
--
<<slots_table.SchedulingCoordinator,&#10548;>>
--
////


//[discrete]
[#startupLeadTime]
=== `startupLeadTime`
+++Start up lead time+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.startupLeadTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.startupLeadTime,&#10548;>>
--
////


//[discrete]
[#SubstitutionResourceList]
=== `SubstitutionResourceList`



[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.SubstitutionResourceList`
| Cardinality
| 0..*
| Type
| xref::class/SubstitutionResourceList.adoc[`SubstitutionResourceList`]


|===

////
[.text-left]
--
<<slots_table.SubstitutionResourceList,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TransmissionInterfaceEntitlement]
=== `TransmissionInterfaceEntitlement`



[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.TransmissionInterfaceEntitlement`
| Cardinality
| 0..*
| Type
| xref::class/TransmissionInterfaceRightEntitlement.adoc[`TransmissionInterfaceRightEntitlement`]


|===

////
[.text-left]
--
<<slots_table.TransmissionInterfaceEntitlement,&#10548;>>
--
////


//[discrete]
[#TREntitlement]
=== `TREntitlement`



[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.TREntitlement`
| Cardinality
| 0..*
| Type
| xref::class/TREntitlement.adoc[`TREntitlement`]


|===

////
[.text-left]
--
<<slots_table.TREntitlement,&#10548;>>
--
////


//[discrete]
[#TRType]
=== `TRType`
+++Transmission Right type - is this an individual contract right or a chain contract right. Types = CHAIN or INDIVIDUAL+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ContractRight.TRType`
| Cardinality
| 0..1
| Type
| xref::enumeration/TRType.adoc[`TRType`]


|===

////
[.text-left]
--
<<slots_table.TRType,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/BidSelfSched.adoc[`BidSelfSched`] | xref::class/BidSelfSched.adoc#TransmissionContractRight[`TransmissionContractRight`]



| xref::class/ContractDistributionFactor.adoc[`ContractDistributionFactor`] | xref::class/ContractDistributionFactor.adoc#TransmissionContractRight[`TransmissionContractRight`]



| xref::class/RTO.adoc[`RTO`] | xref::class/RTO.adoc#TransmissionContractRight[`TransmissionContractRight`]



| xref::class/SchedulingCoordinator.adoc[`SchedulingCoordinator`] | xref::class/SchedulingCoordinator.adoc#TransmissionContractRight[`TransmissionContractRight`]



| xref::class/SubstitutionResourceList.adoc[`SubstitutionResourceList`] | xref::class/SubstitutionResourceList.adoc#TransmissionContractRight[`TransmissionContractRight`]



| xref::class/TransmissionInterfaceRightEntitlement.adoc[`TransmissionInterfaceRightEntitlement`] | xref::class/TransmissionInterfaceRightEntitlement.adoc#ContractRight[`ContractRight`]



| xref::class/TransmissionRightChain.adoc[`TransmissionRightChain`] | xref::class/TransmissionRightChain.adoc#Ind_ContractRight[`Ind_ContractRight`]



| xref::class/TREntitlement.adoc[`TREntitlement`] | xref::class/TREntitlement.adoc#TransmissionContractRight[`TransmissionContractRight`]


|===

